VSKY-68: Fix whitespace on page & add logo for Header (#20)

--- a/src/index.css
+++ b/src/index.css
@@ -5,17 +5,19 @@
 
 @layer base {
   *,
-  ::before,
-  ::after {
+  *::before,
+  *::after {
     font-family: Helvetica Neue, sans-serif;
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
   }
 
-  html {
-    @apply box-border;
-    @apply p-0;
-    @apply m-0;
-    color: #000;
+  html,
+  body {
+    min-height: 100%;
+    margin: 0;
+    padding: 0;
   }
 
   a {
